@@ -1,7 +1,7 @@
 /*
  * vac.cpp - AC voltage source class implementation
  *
- * Copyright (C) 2003 Stefan Jahn <stefan@lkcc.org>
+ * Copyright (C) 2003, 2004 Stefan Jahn <stefan@lkcc.org>
  *
  * This is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: vac.cpp,v 1.2 2003/12/26 14:04:07 ela Exp $
+ * $Id: vac.cpp,v 1.3 2004/05/22 09:17:25 ela Exp $
  *
  */
 
@@ -42,4 +42,12 @@ vac::vac () : circuit (2) {
   setS (2, 1, 1.0);
   setS (2, 2, 0.0);
   type = CIR_VAC;
+  setVoltageSources (1);
+}
+
+void vac::calcDC (void) {
+  setC (1, 1, +1.0); setC (1, 2, -1.0);
+  setB (1, 1, +1.0); setB (1, 2, -1.0);
+  setE (1, 0.0);
+  setD (1, 1, 0.0);
 }
